--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Celular Responsivo</title>
+  <title>Mockup Celular Fixo</title> <!-- Aqui é onde o texto fica visível só na aba -->
   <style>
     :root {
       --accent: #3b82f6;
